syntax = "proto3";

package vecdb;

option go_package = "github.com/khambampati-subhash/govecdb/proto";

service VectorService {
  // Put inserts a vector into the database
  rpc Put(PutRequest) returns (PutResponse);
  rpc BatchPut(BatchPutRequest) returns (BatchPutResponse);
  // Get retrieves a vector by ID
  rpc Get(GetRequest) returns (GetResponse);
  // Search finds the nearest neighbors for a given vector
  rpc Search(SearchRequest) returns (SearchResponse);
}

message Vector {
  string id = 1;
  repeated float data = 2;
  map<string, string> metadata = 3;
}

message PutRequest {
  Vector vector = 1;
  bool is_replication = 2;
}

message PutResponse {
  bool success = 1;
  string error = 2;
}

message BatchPutRequest {
  repeated Vector vectors = 1;
}

message BatchPutResponse {
  bool success = 1;
  string error = 2;
  int32 count = 3;
}

message GetRequest {
  string id = 1;
}

message GetResponse {
  Vector vector = 1;
  string error = 2;
}

message SearchRequest {
  repeated float vector = 1;
  int32 k = 2;
}

message SearchResponse {
  repeated SearchResult results = 1;
  string error = 2;
}

message SearchResult {
  string id = 1;
  float score = 2;
}
